Lighthouse score changes: Keypad is main section (this usually only applies to sites). Move invisible checkboxes/radio buttons further into their containers to avoid hypothetical touch target overlap.

--- a/src/css/games.css
+++ b/src/css/games.css
@@ -214,6 +214,7 @@ fieldset {
 input[type=radio], input[type=checkbox] {
     /* As opposed to display: none, allows keyboard selection */
     position: absolute;
+    top: 16px;
     opacity: 0;
 }
 
